# vfs-malta-slot-checker

./: .gitignore  README.md  cron_commands.md  diag_ec2.py  pyproject.toml  requirements.txt  run.ps1  run_ec2.sh  run_loop.py
config/: config.ini  credentials.local.ini.example  vfs_urls.ini
config/routes/: AE-CHE.json  AE-HUN.json  AE-LUX.json  AE-MT.json
scripts/: pre-commit
src/: main.py  supervisor.py
src/utils/: chrome_launcher.py  config_reader.py  credentials.py  telegram.py  telegram_message.py
src/vfs_bot/: vfs_bot.py
